--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!----Media Query---->
     <!----SCRIPTS---->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="Javascript/code.js" type="text/javascript"></script>
-    <script src="Javascript/jquery.scrollTo.js" type="text/javascript"></script>
-    <script src="Javascript/jquery.localScroll.js" type="text/javascript"></script>
+    <script src="javascript/avascript/code.js" type="text/javascript"></script>
+    <script src="javascript/jquery.scrollTo.js" type="text/javascript"></script>
+    <script src="javascript/jquery.localScroll.js" type="text/javascript"></script>
     <!----SCRIPTS---->
     <meta charset="UTF-8">
     <title>Guild</title>
