--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!----Media Query---->
     <!----SCRIPTS---->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="javascript/avascript/code.js" type="text/javascript"></script>
+    <script src="javascript/code.js" type="text/javascript"></script>
     <script src="javascript/jquery.scrollTo.js" type="text/javascript"></script>
     <script src="javascript/jquery.localScroll.js" type="text/javascript"></script>
     <!----SCRIPTS---->
